--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "index.cds"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand --silent",
     "test:watch": "jest --watch",
     "lint": "eslint .",
     "prepare": "husky install"
