--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "scripts": {
     "test": "jest --runInBand --silent",
     "test:watch": "jest --watch",
-    "lint": "eslint .",
-    "prepare": "husky install"
+    "lint": "eslint ."
   },
   "peerDependencies": {
     "@sap/cds": ">=8"
