--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "test": "jest --runInBand --silent",
     "test:watch": "jest --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "release": "release-it"
   },
   "peerDependencies": {
     "@sap/cds": ">=8"
@@ -49,7 +50,8 @@
     "chai-subset": "^1.6.0",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "release-it": "^18.1.2"
   },
   "engines": {
     "node": ">=16"
