--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
   "dependencies": {
     "@keyv/compress-gzip": "^2.0.2",
     "@keyv/compress-lz4": "^1.0.0",
-    "@keyv/redis": "^4.2.0",
-    "keyv": "^5.2.3"
+    "@keyv/redis": "^4.3.1",
+    "@keyv/sqlite": "^4.0.1",
+    "keyv": "^5.3.1"
   },
   "devDependencies": {
-    "chai": "^4.5.0",
-    "chai-as-promised": "^7.1.2",
-    "chai-subset": "^1.6.0",
-    "eslint": "^8.57.0",
-    "husky": "^9.0.11",
+    "eslint": "^9.21.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "release-it": "^18.1.2"
+    "release-it": "^18.1.2",
+    "@cap-js/cds-test": "^0.2.0"
   },
   "engines": {
     "node": ">=16"
