chore: update dependencies and improve caching service with optional peer dependencies
- Updated `package.json` and `package-lock.json` to reflect new versions of dependencies, including `@cap-js/cds-test`, `eslint`, and `release-it`.
- Introduced optional peer dependencies for storage and compression adapters in the caching service, enhancing flexibility for users.
- Added support for PostgreSQL as a caching store and improved error handling in the caching service.
- Updated documentation to reflect changes in adapter requirements and configuration options.

--- a/examples/app/package.json
+++ b/examples/app/package.json
@@ -9,7 +9,8 @@
     "@sap/cds": "^9",
     "express": "^4",
     "@sap-cloud-sdk/http-client": "~4.0.2",
-    "cds-caching": "*"
+    "cds-caching": "*",
+    "@keyv/redis": "5.1.6"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^2.0.1",
