feat: include hana and postgres support

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cds",
     "caching",
     "redis",
+    "hana",
     "keyv"
   ],
   "author": "Mike Zaschka <opensource@mikezaschka.com>",
@@ -40,7 +41,8 @@
     "@keyv/redis": "^5.0.0",
     "@keyv/sqlite": "^4.0.5",
     "@resolid/keyv-sqlite": "^4.0.5",
-    "@keyv/postgres": "^4.0.5"
+    "@keyv/postgres": "^4.0.5",
+    "keyv-hana": ">=1.0.0"
   },
   "peerDependenciesMeta": {
     "@keyv/redis": {
@@ -59,6 +61,9 @@
       "optional": true
     },
     "@keyv/postgres": {
+      "optional": true
+    },
+    "keyv-hana": {
       "optional": true
     }
   },
