feat: enhance caching plugin and update dependencies
- Refactored the caching build plugin to improve initialization and cleaning processes.
- Added logging for plugin registration.
- Updated `package.json` and `package-lock.json` to include `@sap/cds-dk` and `keyv-hana` as optional dependencies, ensuring compatibility with newer versions.
- Improved overall structure and clarity of the caching service.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "peerDependencies": {
     "@sap/cds": ">=8",
+    "@sap/cds-dk": ">=9",
     "@keyv/compress-gzip": "^2.0.3",
     "@keyv/compress-lz4": "^1.0.1",
     "@keyv/redis": "^5.0.0",
